src/assets/main.css
@import url("https://shogo82148.github.io/genjyuugothic-subsets/GenJyuuGothic-P-Normal/GenJyuuGothic-P-Normal.css");
@import url("https://shogo82148.github.io/genjyuugothic-subsets/GenJyuuGothic-P-Medium/GenJyuuGothic-P-Medium.css");
@import url("https://shogo82148.github.io/genjyuugothic-subsets/GenJyuuGothic-P-Bold/GenJyuuGothic-P-Bold.css");


@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    font-family: GenJyuuGothicP, sans-serif;
    //font-family: 'Noto Sans TC', sans-serif;
    height: 100%;
  }
  body {
    @apply font-medium tracking-wider lg:text-lg lg:tracking-wide h-full cursor-main;
  }
  #app {
    position: relative;
    overflow-x: hidden;
    height: 100%;
  }
  h1 {
    @apply font-bold text-xl leading-6 tracking-wider lg:text-4xl lg:leading-tight lg:tracking-wide;
  }
  h2 {
    @apply font-bold text-3xl tracking-wider lg:text-6xl lg:leading-tight lg:tracking-wide;
  }
  h3 {
    @apply font-bold text-2xl tracking-wider lg:text-5xl lg:leading-tight lg:tracking-wide;
  }
  h4 {
    @apply font-bold text-xl tracking-wider lg:text-4xl lg:leading-tight lg:tracking-wide;
  }
  h5 {
    @apply font-bold text-lg tracking-wider lg:text-2xl lg:tracking-wide;
  }
}

